--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@babel/runtime": "^7.14.6",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.29.1",
-    "node-cmd": "^4.0.0"
+    "node-cmd": "^4.0.0",
+    "node-notifier": "^10.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2"
